--- a/about_us/about_us.html
+++ b/about_us/about_us.html
@@ -19,7 +19,7 @@
                         <a href=""><li>Cardápio</li></a>
                         <a href="../about_us/about_us.html"><li>Sobre Nós</li></a>
                         <a href="../contact/contact.html"><li>Contato</li></a>
-                        <a href=""><li>Sair</li></a>
+                        <a href="../homepage/homepage.html"><li>Sair</li></a>
                     </ul>
                 </nav>
             </div>
