--- a/contact/contact.html
+++ b/contact/contact.html
@@ -19,7 +19,7 @@
                         <a href=""><li>Cardápio</li></a>
                         <a href="../about_us/about_us.html"><li>Sobre Nós</li></a>
                         <a href="../contact/contact.html"><li>Contato</li></a>
-                        <a href=""><li>Sair</li></a>
+                        <a href="../homepage/homepage.html"><li>Sair</li></a>
                     </ul>
                 </nav>
             </div>
@@ -45,16 +45,11 @@
                             <hr>
                         </div>
                         <div class="body-page-forms">
-                            <form action="POST">
-                                <div>
-                                    <label for="txtEmail">Email:</label>
-                                    <input type="text" id="txtEmail" placeholder="nome@email.com">
-                                   
-                                </div>
-                                <div>
-                                    <label for="txtMsg">Mensagem:</label>
-                                    <input type="text" id="txtMsg" placeholder="Mensagem de contato" >
-                                </div>
+                            <form action="POST">   
+                                <div><label for="txtEmail">Email:</label></div>
+                                <div><input type="text" id="txtEmail" placeholder="nome@email.com"> </div>
+                                <div><label for="txtMsg">Mensagem:</label></div>
+                                <div><input type="text" id="txtMsg" placeholder="Mensagem de contato" ></div>
                             </form>
                         </div>
                     </div>
