--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -38,7 +38,7 @@
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci enimnihil quos commodi corporis aspernatur sunt ad itaque velit ullam quasillum asperiores ratione consequuntur aliquam nesciunt, beatae nulla id?</p>
                         </div>
                         <div class="body-page-container-bttn">
-                            <button>ENTRAR</button>
+                           <a href="../contact/contact.html">ENTRAR</a>
                         </div>
                     </div>    
                 </div>
